small night fixes

--- a/appendices.tex
+++ b/appendices.tex
@@ -60,7 +60,8 @@ $\D$ 		& Electric displacement\\
 $\HH$ 		& Magnetic field\\
 $\B$ 		& Magnetic displacement\\
 $f(t), F(\omega)$ & General function in time domain, and its counterpart in Frequency domain \\
-$\chi_e,\chi_m$	& Electric and magnetic susceptibility in the local approximantion \\ %% TODO separate freq-domain and time-domain susc?
+$\chi_e(t),\chi_m(t)$	& Electric and magnetic susceptibility in the local approximantion \\ %% TODO separate freq-domain and time-domain susc?
+$\chi_e(\omega)$, $\chi_m(\omega)$ 	& Electric and magnetic susceptibility\\
 $\varepsilon_0$ &Vacuum permittivity, $8.85\cdot10^{-12}$ F/m\\
 $\mu_0$		&Vacuum permeability, $1.25\cdot10^{-6}$ H/m \\
 $\epsrl(\omega)$ &Relative permittivity in the local approximation\\
@@ -69,18 +70,16 @@ $\epsrn(\omega, \kk)$ &Relative permittivity for nonlocal media\\
 $\murn(\omega, \kk)$ &Relative permeability for nonlocal media\\
 $\epsLL(\omega, \kk)$ &Relative permittivity in the Landau-Lifshitz ($\E\D\B$) formulation\\
 %% TODO add eps, epsLL, mu_r, mu_LL, and distinguish between the symmetric and Landau-Lifshitz form
-$\chi_e$, $\chi_m$ 	& Electric and magnetic susceptibility\\
 $\Neff$ 	& Effective index of refraction (of periodic medium)\\
 $\eeff$ 	& Effective permittivity\\
 $\meff$ 	& Effective permeability\\
 $\Zeff$ 	& Effective impedance\\
-$\rr$, $\brho$ 		& Radius vector\\
+$\rr$, $\brho$ 		& Position in space (radius vector)\\
 $\mathbf{a}_{1,2,3}$, $a$ 		& Lattice vectors, unit cell size in the cubic lattice \\
 $t$, $\tau$ 		& Time\\
 $\omega$ 	& Angular frequency\\
 $\kk$ 		& Wave vector in homogeneous medium\\
-$\KK$ 		& Bloch wave vector in periodic medium\\
-
+$\KK$ 		& Wave vector of the Bloch wave in periodic medium\\
 $\mathbb{R}$		& Real numbers\\
 $\mathbb{Z}$		& Integers\\
 $\mathbb{C}$		& Complex numbers\\
