--- a/defs.tex
+++ b/defs.tex
@@ -25,6 +25,8 @@
 
 \newcommand{\kk}{{\mathbf{k}}}
 \newcommand{\KK}{{\mathbf{K}}}
+\newcommand{\TT}{\perp_{\mathbf{k}}}
+%\newcommand{\TT}{\small{\frac{\kk\times\kk\times}{-k^2}}}
 \newcommand{\epsr}{{\varepsilon_r}}
 \newcommand{\vg}{{\mathbf{v_g}}}
 
